[package]
name = "mailrs-ical"
version = "2.0.0"
edition = "2024"
description = "RFC 5545 (iCalendar) parser, serializer, and iTIP semantics — zero I/O, hand-rolled, with VTIMEZONE + RRULE support."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/goliajp/mailrs"
homepage = "https://github.com/goliajp/mailrs"
documentation = "https://docs.rs/mailrs-ical"
authors = ["GOLIA K.K."]
keywords = ["icalendar", "itip", "rfc5545", "rfc5546", "calendar"]
categories = ["parser-implementations", "date-and-time", "email"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rrule = "0.14"
serde = { version = "1", features = ["derive"] }
# Inline-short-string for RawComponent.name / RawProperty.name / tzid.
# Standard iCal names ("VEVENT", "DTSTART", "America/New_York" etc) all
# fit in the 24-byte inline buffer.
compact_str = { version = "0.9", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
icalendar = "0.17"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "compare_icalendar"
harness = false
