[package]
name = "mailrs-imap-codec"
version = "1.0.0"
edition = "2024"
description = "Tokio Decoder/Encoder for the RFC 9051 IMAP wire format — handles both line mode (CRLF-terminated commands and responses) and literal mode (raw byte-counted payloads, used for APPEND, FETCH BODY[], etc.). Stateful: caller toggles literal mode with `expect_literal(size)` after parsing a `{N}` literal marker."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/goliajp/mailrs"
homepage = "https://github.com/goliajp/mailrs"
documentation = "https://docs.rs/mailrs-imap-codec"
authors = ["GOLIA K.K."]
keywords = ["imap", "rfc9051", "tokio", "codec", "framed"]
categories = ["email", "network-programming", "asynchronous"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }

[[bench]]
name = "imap_codec"
harness = false

[dev-dependencies]
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
criterion = { workspace = true }
